# anteojOS

./: CMakeLists.txt  Dockerfile  README.md  docker.sh  run.sh
Bootloader/Pure64/: pure64.sys
Bootloader/Pure64/src/: pure64.asm
Image/: x64BareBonesImage.qcow2  x64BareBonesImage.vmdk
Kernel/: beepDriver.c  clockDriver.c  exceptions.c  font.c  idtLoader.c  irqDispatcher.c  kernel.c  keyboardDriver.c  miniVideoDriver.c  sleep.c  syscaller.c  syscaller2.c  timeDriver.c  utils.c  videoDriver.c  videoDriver2.c
Kernel/asm/: beep.asm  interrupts.asm  ioDriver.asm  keyboard.asm  sysCallHandler.asm  timeDriver.asm
Kernel/carpeta sin título/: Copia de font.h  Copia de videoDriver.c  Copia de videoDriver.h
Kernel/include/: beepDriver.h  clockDriver.h  exceptions.h  font.h  idtLoader.h  interrupts.h  ioDriver.h  keyboardDriver.h  lib.h  miniVideoDriver.h  sleep.h  sysCallHandler.h  syscaller.h  timeDriver.h  utils.h  videoDriver.h
Userland/: Makefile.inc
Userland/SampleCodeModule/: Makefile  SevenSegNumFont.c  SevenSegNumFontPlus.c  SevenSegNumFontPlus.h  _loader.c  biohazard2_XL.h  clock.c  clock.h  colour.c  colour.h  colours.c  colours.h  exceptionTester.asm  piloNumbers.c  piloNumbers.h  sampleCodeModule.c  scLib.c  scLib.h  shell.c  shell.h  shellCommands.c  shellCommands.h  stdio.c  stdio.h  stdioJime.c  stdioJime.h  stdlib.c  stdlib.h  stdlibJime.c  stdlibJime.h  syscall.asm  syscall.h  timezone.c  video.c  videoModule.c  videoModule.h
Userland/SampleCodeModule/asm/: exceptionTester.asm  syscall.asm
Userland/SampleCodeModule/include/: SevenSegNumFontPlus.h  biohazard2_XL.h  clock.h  colour.h  colours.h  eyeGlassesSmall.h  piloNumbers.h  scLib.h  shell.h  shellCommands.h  stdio.h  stdioJime.h  stdlib.h  stdlibJime.h  timezone.h  video.h  videoModule.h
Userland/StandardLibrary/: stdio.c  stdio.h
