cmake_minimum_required(VERSION 3.10)
project(anteojOS)

set(CMAKE_CXX_STANDARD 11)

include_directories(Kernel/include)
include_directories(Toolchain/ModulePacker)
include_directories(Userland/SampleCodeModule)

add_executable(anteojOS
        "Bootloader/BMFS/BareMetal File System.md"
        Bootloader/BMFS/bmfs.bin
        Bootloader/BMFS/bmfs.c
        Bootloader/BMFS/Makefile
        Bootloader/BMFS/README.md
        Bootloader/Pure64/docs/CREDITS.TXT
        Bootloader/Pure64/docs/LICENSE.TXT
        Bootloader/Pure64/src/bootsectors/bmfs_mbr.asm
        Bootloader/Pure64/src/bootsectors/pxestart.asm
        Bootloader/Pure64/src/init/acpi.asm
        Bootloader/Pure64/src/init/cpu.asm
        Bootloader/Pure64/src/init/isa.asm
        Bootloader/Pure64/src/init/pic.asm
        Bootloader/Pure64/src/init/smp.asm
        Bootloader/Pure64/src/init/smp_ap.asm
        Bootloader/Pure64/src/interrupt.asm
        Bootloader/Pure64/src/pci.asm
        Bootloader/Pure64/src/pure64.asm
        Bootloader/Pure64/src/syscalls.asm
        Bootloader/Pure64/src/sysvar.asm
        Bootloader/Pure64/bmfs_mbr.sys
        Bootloader/Pure64/build.bat
        Bootloader/Pure64/Makefile
        "Bootloader/Pure64/Pure64 Manual.md"
        Bootloader/Pure64/pure64.sys
        Bootloader/Pure64/pxestart.sys
        Bootloader/Pure64/readme.md
        Bootloader/Makefile
        cmake-build-debug/anteojOS.cbp
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        Image/Makefile
        Image/packedKernel.bin
        Image/x64BareBonesImage.img
        Image/x64BareBonesImage.qcow2
        Image/x64BareBonesImage.vmdk
        Kernel/asm/interrupts.asm
        Kernel/asm/interrupts.o
        Kernel/asm/ioDriver.asm
        Kernel/asm/ioDriver.o
        Kernel/asm/keyboard.asm
        Kernel/asm/keyboard.o
        Kernel/asm/libasm.asm
        Kernel/asm/libasm.o
        Kernel/asm/sysCallHandler.asm
        Kernel/asm/sysCallHandler.o
        Kernel/asm/timeDriver.asm
        Kernel/asm/timeDriver.o
        Kernel/include/beepDriver.h
        Kernel/include/defs.h
        Kernel/include/font.h
        Kernel/include/idtLoader.h
        Kernel/include/interrupts.h
        Kernel/include/ioDriver.h
        Kernel/include/keyboardDriver.h
        Kernel/include/lib.h
        Kernel/include/moduleLoader.h
        Kernel/include/naiveConsole.h
        Kernel/include/sysCallHandler.h
        Kernel/include/timeDriver.h
        Kernel/include/videoDriver.h
        Kernel/clockDriver.o
        Kernel/exceptions.c
        Kernel/exceptions.o
        Kernel/font.c
        Kernel/font.o
        Kernel/idtLoader.c
        Kernel/idtLoader.o
        Kernel/irqDispatcher.c
        Kernel/irqDispatcher.o
        Kernel/kernel.bin
        Kernel/kernel.c
        Kernel/kernel.ld
        Kernel/kernel.o
        Kernel/keyboardDriver.c
        Kernel/keyboardDriver.o
        Kernel/lib.c
        Kernel/lib.o
        Kernel/loader.asm
        Kernel/loader.o
        Kernel/Makefile
        Kernel/Makefile.inc
        Kernel/moduleLoader.c
        Kernel/moduleLoader.o
        Kernel/naiveConsole.c
        Kernel/naiveConsole.o
        Kernel/syscaller.c
        Kernel/syscaller.o
        Kernel/utils.c
        Kernel/utils.o
        Kernel/videoDriver.c
        Kernel/videoDriver.o
        Toolchain/ModulePacker/main.c
        Toolchain/ModulePacker/Makefile
        Toolchain/ModulePacker/modulePacker.h
        Toolchain/ModulePacker/mp.bin
        Toolchain/Makefile
        Userland/SampleCodeModule/_loader.c
        Userland/SampleCodeModule/_loader.o
        Userland/SampleCodeModule/clock.c
        Userland/SampleCodeModule/clock.h
        Userland/SampleCodeModule/clock.o
        Userland/SampleCodeModule/Makefile
        Userland/SampleCodeModule/sampleCodeModule.c
        Userland/SampleCodeModule/sampleCodeModule.ld
        Userland/SampleCodeModule/sampleCodeModule.o
        Userland/SampleCodeModule/asm/syscall.asm
        Userland/SampleCodeModule/syscall.o
        Userland/0000-sampleCodeModule.bin
        Userland/0001-sampleDataModule.bin
        Userland/Makefile
        Userland/Makefile.inc
        CMakeLists.txt
        docker.sh
        Dockerfile
        Makefile
        README.md
        run.sh Kernel/beepDriver.c)
